<?xml version="1.0"?>
<package>
  <name>vectornav</name>
  <version>2.0.0</version>
  <description>ROS interface for the VectorNav INS/GPS</description>

  <maintainer email="dereck@gmail.com">Dereck Wonnacott</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://ros.org/wiki/vectornav</url> -->

  <author email="dereck@gmail.com">Dereck Wonnacott</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>


  <!-- Maintainer Note:
      The vnccpplib directory is from http://www.vectornav.com/support/downloads
      I removed the version string from the directory name, sanitized file
      permissions, and removed all but the src and include directories.
   -->
</package>
