<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vectornav</name>
  <version>3.0.0</version>
  <description>ROS2 interface for VectorNav IMU/INS/GNSS</description>
  <maintainer email="dereck@gmail.com">Dereck Wonnacott</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vectornav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- TODO: .msg Hex Constant Support Required -->
  <depend version_gte="1.2.0">rosidl_adapter</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- Maintainer Note:
    The vnccpplib directory is from http://www.vectornav.com/support/downloads
  -->
</package>
